--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
+body{
+  height: 100%;
+}
+.header{
   text-align: center;
+  background-color: lightgrey;
+  font-family: 'Anton', sans-serif;
+  font-size: 50px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  background-color: rgb(26, 26, 26);
+  height: 100vh;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  min-width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
+  
+}
+.centered{
+  
+  width: 300px;
+  height: 300px;
+}
+.casilla{
+  
+  border: 3px solid rgb(106, 213, 255);
+  background-color: aliceblue;
+  width: 100px;
+  height: 100px;
+  opacity: 0.5;
+
+}
+.casilla:hover{
+  background-color: white;
+  opacity: 1;
+  transform: scale(1.1);
+}
+.jugador{
+  margin-top:  20px;
+  border: 3px solid blanchedalmond;
+  border-radius: 5px;
+  
+}
+.jugador>h3{
+  color: azure;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
